[gd_scene load_steps=2 format=3 uid="uid://dvelklm0bmu7f"]

[ext_resource type="Script" path="res://basic_scipt.gd" id="1_n71ps"]

[node name="BasicScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n71ps")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CoinLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="BasicLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "COIN_LABEL_ZERO"
horizontal_alignment = 1

[node name="BasicButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "BTN_LABEL"

[connection signal="button_down" from="Panel/VBoxContainer/BasicButton" to="." method="_on_basic_button_button_down"]
